# eunomia-bpf

./: .clang-format  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  404.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  benchmark.html  codecov.yaml  common_problems.html  dockerfile  ecli-dockerfile-usage.html  ecli.dockerfile  flake.nix  index.html  mannual.html  manual.html  online.html  print.html  quickstart.html  searchindex.js  searchindex.json  supporting-external-BTF.html  video.html  wasm-bpf.html
bpf-loader-rs/bpf-loader-c-wrapper/: Cargo.toml  eunomia-bpf.h
bpf-loader-rs/bpf-loader-c-wrapper/src/: helper.rs  lib.rs  wrapper.rs
bpf-loader-rs/bpf-loader-cli/: Cargo.toml  README.md
bpf-loader-rs/bpf-loader-cli/src/: main.rs
bpf-loader-rs/bpf-loader-lib/: .gitignore  Cargo.toml  README.md
bpf-loader-rs/bpf-loader-lib/assets/: README.md  runqlat.json  simple_prog.btf  simple_prog.c  simple_prog.h  simple_prog.skel.json  simple_prog_2.package.json
bpf-loader-rs/bpf-loader-lib/assets/arg_builder_test/: skel.json
bpf-loader-rs/bpf-loader-lib/assets/int128_test/: package.json  prog.c  prog.h  prog.skel.json
bpf-loader-rs/bpf-loader-lib/assets/multiple_export_ringbuf/: event.h  multiple-custom-struct.json  multiple-invalid-struct-1.json  multiple-invalid-struct-2.json  multiple.bpf.c  (+1 more)
bpf-loader-rs/bpf-loader-lib/src/: btf_container.rs  elf_container.rs  helper.rs  lib.rs  meta.rs  skeleton.rs  state.rs  tests.rs
compiler/cmd/: .gitignore  Cargo.toml  bootstrap.h  build.rs
compiler/cmd/src/: compile_bpf.rs  config.rs  document_parser.rs  export_types.rs  helper.rs  libclang.rs  main.rs  tests.rs  wasm.rs
compiler/cmd/test/: event.h  multi_event.h
ecli/: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  alpine.dockerfile  apis.yaml  build.rs  code-gen.sh  docker.html  dockerfile  index.html  sources.list  ubuntu.dockerfile
ecli/.cargo/: config
ecli/api/: Cargo.toml  README.md  apis.yaml
ecli/api/api/: openapi.yaml
ecli/api/docs/: ListGet200Response.md  ListGet200ResponseTasksInner.md  LogPost200Response.md  LogPostRequest.md  StopPost200Response.md  default_api.md
ecli/api/src/: lib.rs  models.rs
ecli/bpf-oci/assets/: docker-config-test.json
ecli/bpf-oci/src/: lib.rs  tests.rs
ecli/client/: .gitignore  Cargo.toml  README.md
ecli/client/src/: helper.rs  http_client.rs  main.rs  native_client.rs  utils.rs
ecli/client/tests/: cli_output.rs
ecli/cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
ecli/ecli-lib/: Cargo.toml
ecli/ecli-lib/src/: error.rs  helper.rs  lib.rs
ecli/ecli-lib/tests/: api_test.rs  bootstrap.json  integration_test.rs
ecli/ecli-oci/: Cargo.toml
ecli/ecli-oci/src/: auth.rs  lib.rs
ecli/ecli-rs/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  wrapper.h
ecli/ecli-rs/src/: main.rs
ecli/include/ecli/: cmd_client.h  cmd_entry.h  cmd_run.h  config.h  ecli_core.h  eunomia_runner.h  http_server.h  server.h  tracker_manager.h  url_resolver.h
ecli/include/eunomia/: config.h  eunomia_core.h  eunomia_runner.h  tracker_manager.h  url_resolver.h
ecli/include/helpers/: syscall_helpers.h
ecli/lib/: Cargo.toml  build.rs
ecli/lib/src/: lib.rs
ecli/lib/tests/: bootstrap.wasm  integration_test.rs  test.json
ecli/minimal/: CMakeLists.txt  Makefile
ecli/minimal/src/: eunomia_runner.cpp  main.cpp  url_resolver.cpp
ecli/server/: Cargo.toml  README.md
ecli/server-codegen/: Cargo.toml  README.md
ecli/server-codegen/.openapi-generator/: FILES
ecli/server-codegen/api/: openapi.yaml
ecli/server-codegen/src/: context.rs  header.rs  lib.rs  models.rs
ecli/server/src/: main.rs  utils.rs
ecli/src/: cmd_client.cpp  cmd_pull.cpp  cmd_run.cpp  cmd_server.cpp  config.cpp  ecli_core.cpp  eunomia_core.cpp  eunomia_runner.cpp  http_server.cpp  main.cpp  main.rs  server.cpp  url_resolver.cpp
ecli/src/config/: mod.rs
ecli/src/error/: mod.rs
ecli/src/json_runner/: json.rs  mod.rs
ecli/src/oci/: mod.rs
ecli/src/runner/: mod.rs  remote.rs
ecli/src/tar_reader/: mod.rs  tar_reader.rs
ecli/src/tar_runner/: eunomia_bpf.rs  mod.rs  tar.rs
ecli/src/wasm_bpf_runner/: mod.rs  wasm.rs  wasm_bpf.rs
ecli/test/: config.json
ecli/test/src/: get_file_test.cpp  oom_test.cpp
ecli/tests/: api-test.py  cases.txt  eval.py
eunomia-cc/cmd/: Cargo.toml
eunomia-cc/cmd/src/: bpftool.rs  compile_bpf.rs  config.rs  document_parser.rs  export_template.c  export_types.rs  main.rs
eunomia-cc/cmd/test/: client.bpf.c  multi_event.h
eunomia-exporter/: Cargo.toml  README.md  build.rs
eunomia-exporter/examples/: opensnoop.json  opensnoop.yaml  package.json
eunomia-exporter/examples/opensnoop/: opensnoop.json  opensnoop.yaml  opensnoop_package.json
eunomia-exporter/src/: bindings.rs  bpfmanager.rs  bpfprog.rs  config.rs  main.rs  server.rs  state.rs
examples/simple-ewasm-runner/: CMakeLists.txt  README.md  main.cpp
examples/simple-runner/: CMakeLists.txt  README.md  main.cpp
examples/simple-wasm-bpf-runner/: CMakeLists.txt  main.cpp
wasm-runtime/: CMakeLists.txt  Dockerfile  Makefile  README.md
wasm-runtime/cmake/: Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
wasm-runtime/examples/: .gitignore  Makefile  README.md  bootstrap.bpf.c  bootstrap.c  bootstrap.h  bootstrap.skel.h  bootstrap.wasm.h  build.sh  libbpf-wasm.h  wasm-bpf-api.h
wasm-runtime/include/: bpf-api.h
wasm-runtime/include/ewasm/: ewasm.h  ewasm.hpp
wasm-runtime/include/wasm-app/: entry.h  helpers.h  native-ewasm.h
wasm-runtime/scripts/: build.sh
wasm-runtime/scripts/template/: app.c  wasm-app.h
wasm-runtime/src/: bpf-api.cpp  eunomia-api.cpp  ewasm.cpp  main.cpp  native_impl.cpp
wasm-runtime/test/: CMakeLists.txt
wasm-runtime/test/bpf-app/: Makefile
wasm-runtime/test/src/: example_test.cpp
wasm-runtime/test/wasm-apps/: Makefile  binding.c  build.sh  cpp-opensnoop.cpp  init_only.c  main.c  opensnoop-struct-bindgen.h  opensnoop.c  opensnoop.h  process_only.c
(+752 files in other folders)
