[package]
name = "ecli"
version = "0.1.0"
edition = "2021"
members = [
    "lib",
    "client",
    "server",
]

[dependencies]
base64 = "0.21.0"
clap = { version = "4.0.32", features = ["derive"] }
eunomia-rs = { path = "../eunomia-sdks/eunomia-rs" }
env_logger = "0.9.0"
log = "0.4.17"
rpassword = "7.2.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
oci-distribution = "0.9.4"
signal-hook = "0.3.3"
swagger = "6.2.1"
tar = "0.4"
wasm-bpf-rs = "0.2.1"
bpf-loader-lib = { path = "../bpf-loader-rs/bpf-loader-lib" }

