[package]
name = "bpf-loader-cli"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bpf-loader-lib = { path = "../bpf-loader-lib" }
flexi_logger = "0.25.3"
log = "0.4.17"
serde_json = "1.0.95"
signal-hook = "0.3.15"
