[package]
name = "bpf-loader-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
deflate = "1.0.0"
inflate = "0.4.5"
libbpf-rs = "0.20.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
