[package]
name = "bpf-loader-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
btfdump = "0.0.2"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["string"] }
deflate = "1.0.0"
errno = "0.3.1"
faerie = "0.16.0"
flexi_logger = "0.25.3"
inflate = "0.4.5"
libbpf-rs = "0.20.1"
log = "0.4.17"
object = "^0.11.0"
os-release = "0.1.0"
ouroboros = "0.15.6"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = "2.3.2"
target-lexicon = "^0.11.2"
uname-rs = "0.1.1"


[features]
no-load-bpf-tests = []
