[package]
name = "ecc-rs"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A compiler to produce ebpf programs that can be run by ecli"
repository = "https://github.com/eunomia-bpf/eunomia-bpf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
run_script = "^0.10.0"
anyhow = "1.0"
home = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
flate2 = "1.0"
base64 = "0.13.1"
clang = "2.0.0"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
tar = "0.4.38"
fs_extra = "1.3.0"
tempfile = "3.5.0"
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.17"
flexi_logger = "0.25.4"

[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.3.0"
