[package]
name = "ecli"
version = "0.2.1"
edition = "2021"
description = "The client cli wrapper of ecli"
license = "MIT"

[dependencies]
ecli-lib = { path = "../ecli-lib", version = "0.2.1" }
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
clap = { version = "4.0.32", features = ["derive"] }
ctrlc = "3.2.5"
flexi_logger = "0.25.3"

[features]

http = ["ecli-lib/http-client"]
native = ["ecli-lib/native-client"]
default = ["http", "native"]
all = ["http", "native"]
