[package]
name = "ecli-lib"
version = "0.2.6"
edition = "2021"
description = "The core implementation of ecli"
license = "MIT"

[dependencies]
base64 = "0.21.0"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["native-tls-vendored"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
tokio = { version = "1.24.2", features = [
    "rt-multi-thread",
    "io-std",
    "test-util",
] }

ecli-server-codegen = { path = "../server-codegen", version = "1.0.0", optional = true }
async-trait = "0.1.68"
chrono = "0.4.24"
anyhow = "1.0.70"
swagger = { version = "6.1", features = [
    "serdejson",
    "server",
    "client",
    "tls",
    "tcp",
], optional = true }
serde_yaml = "0.9.21"
home = "0.5.4"
thiserror = "1.0.40"
bpf-oci = { path = "../bpf-oci" ,version = "0.1.0"}
# These deps are only needed when `native-client` feature is enabled
bpf-loader-lib = { path = "../../bpf-loader-rs/bpf-loader-lib", version = "0.1.3", optional = true }
wasm-bpf-rs = { version = "0.3.2", optional = true }
bpf-compatible-rs = { version = "0.1.0", optional = true }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
ecli-lib = { path = ".", features = ["all"] }
flexi_logger = "0.25.3"

[features]
native-client = [
    "dep:bpf-loader-lib",
    "dep:wasm-bpf-rs",
    "dep:bpf-compatible-rs",
]
http-client = ["dep:ecli-server-codegen", "dep:swagger"]
client = ["native-client", "http-client"]
http-server = ["native-client", "dep:ecli-server-codegen", "dep:swagger"]
all = ["client", "http-server"]
default = []
