[package]
name = "ecli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
ureq = "*"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
oci-distribution = "0.9.4"

[build-dependencies]
bindgen = "0.53.1"
