[package]
name = "lib"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[dependencies]
base64 = "0.21.0"
clap = { version = "4.0.32", features = ["derive"] }
eunomia-rs = {path = "../../eunomia-sdks/eunomia-rs"}
bpf-loader-lib = { path = "../../bpf-loader-rs/bpf-loader-lib" }
env_logger = "0.9.0"
log = "0.4.17"
rpassword = "7.2.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
url = "2.3.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
oci-distribution = "0.9.4"
signal-hook = "0.3.3"
swagger = "6.2.1"
tar = "0.4"
wasm-bpf-rs = "0.2.1"
wasmtime-wasi = "5.0.0"

openssl = "0.10.45"
tokio-openssl = "0.6.3"
blake3 = "1.3.3"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix = "0.13.0"
tungstenite = "0.18.0"

[dev-dependencies]
anyhow = "1.0.70"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-test = "0.4.2"
mockito = "1.0.1"
nix = "0.26.2"

[build-dependencies]
bindgen = "0.60.1"
