[package]
name = "ecc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
regex = "1"
run_script = "^0.10.0"
anyhow = "1.0"
home = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
flate2 = "1.0"
base64 = "0.13.1"
clang = "2.0.0"
rust-embed="6.4.2"
