cmake_minimum_required(VERSION 3.10)
project(ewasm-demo)
set(PROJECT_NAME ewasm_demo)
set(CMAKE_BUILD_TYPE Release)
add_executable(${PROJECT_NAME} main.cpp)

set(EUNOMIA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../bpf-loader)
set(EWASM_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../wasm-runtime)
set(WAMR_ROOT_DIR ../../third_party/wasm-micro-runtime)
include_directories(${EUNOMIA_DIR}/include)
include_directories(${WAMR_ROOT_DIR}/core/iwasm/include/)
include_directories(${EWASM_DIR}/include)

add_subdirectory(${EWASM_DIR} ${CMAKE_CURRENT_BINARY_DIR}/wasm-runtime)
target_link_libraries(${PROJECT_NAME} PUBLIC ewasm)